test/fixtures/basic/app/pages/invalid-root/3.vue
<!-- eslint-disable vue/no-multiple-template-root -->
<template>
  <div>Multiple</div>
  <div>elements</div>
</template>
